--- a/directbak.yaml
+++ b/directbak.yaml
@@ -155,7 +155,6 @@ payload:
   - '+.021zu.com'
   - '+.022003.com'
   - '+.0221155.com'
-  - '+.0222z6.com'
   - '+.022ee.com'
   - '+.022meishu.com'
   - '+.022s.com'
@@ -2139,7 +2138,6 @@ payload:
   - '+.22dm.com'
   - '+.22doc.com'
   - '+.22edu.com'
-  - '+.22evil.com'
   - '+.22ff.com'
   - '+.22hd.com'
   - '+.22hyk.com'
@@ -3088,6 +3086,7 @@ payload:
   - '+.37pps.com'
   - '+.37see.com'
   - '+.37tang.com'
+  - '+.37tgy.com'
   - '+.37wan.com'
   - '+.37wan.net'
   - '+.37wanimg.com'
@@ -3701,7 +3700,6 @@ payload:
   - '+.5156rcw.com'
   - '+.515app.com'
   - '+.515car.com'
-  - '+.515fa.com'
   - '+.515ha.com'
   - '+.515ppt.com'
   - '+.51658042.com'
@@ -4275,6 +4273,7 @@ payload:
   - '+.520chs.com'
   - '+.520discount.com'
   - '+.520fx.com'
+  - '+.520hello.com'
   - '+.520hhht.com'
   - '+.520im.com'
   - '+.520it.com'
@@ -5116,7 +5115,6 @@ payload:
   - '+.6080d.com'
   - '+.6080j.com'
   - '+.6080k.com'
-  - '+.6088.xyz'
   - '+.6090b.com'
   - '+.609999.xyz'
   - '+.60dj.com'
@@ -5243,7 +5241,6 @@ payload:
   - '+.66163.com'
   - '+.66168.net'
   - '+.66173yx.com'
-  - '+.661832.com'
   - '+.662city.com'
   - '+.662p.com'
   - '+.6631.com'
@@ -5497,7 +5494,6 @@ payload:
   - '+.701sou.com'
   - '+.703804.com'
   - '+.705112.com'
-  - '+.7068.cc'
   - '+.7080edu.com'
   - '+.7082.com'
   - '+.709xs.com'
@@ -9273,6 +9269,7 @@ payload:
   - '+.atop.fun'
   - '+.atpanel.com'
   - '+.atstudy.com'
+  - '+.attacker.fit'
   - '+.attakids.com'
   - '+.attri.mobi'
   - '+.attyou.com'
@@ -10880,6 +10877,7 @@ payload:
   - '+.biqudu.net'
   - '+.biqudu.tv'
   - '+.biqufu.com'
+  - '+.biquge-app.com'
   - '+.biquge.biz'
   - '+.biquge.info'
   - '+.biquge.la'
@@ -11314,7 +11312,6 @@ payload:
   - '+.bjzmkm.com'
   - '+.bjznnt.com'
   - '+.bjzph.com'
-  - '+.bjzqcbook.com'
   - '+.bjzqw.com'
   - '+.bjzs114.com'
   - '+.bjzwzx.com'
@@ -11371,6 +11368,7 @@ payload:
   - '+.blibee.net'
   - '+.blimage.com'
   - '+.bliner.me'
+  - '+.bling.link'
   - '+.blingabc.com'
   - '+.blingclubs.com'
   - '+.blinkol.com'
@@ -11448,7 +11446,6 @@ payload:
   - '+.blyun.com'
   - '+.bm001.com'
   - '+.bm2088.com'
-  - '+.bm724.com'
   - '+.bm777777.com'
   - '+.bm8.tv'
   - '+.bm8885.com'
@@ -13105,7 +13102,6 @@ payload:
   - '+.cdyou.net'
   - '+.cdyuanhang.com'
   - '+.cdyushun.com'
-  - '+.cdywgou.com'
   - '+.cdyzg.com'
   - '+.cdzcy.net'
   - '+.cdzdgw.com'
@@ -13251,7 +13247,6 @@ payload:
   - '+.cesses.org'
   - '+.cet-46.com'
   - '+.cetc33.com'
-  - '+.cetc36.com'
   - '+.cetc52.com'
   - '+.cetccloud.com'
   - '+.cetccloud.store'
@@ -13268,7 +13263,6 @@ payload:
   - '+.cf-ns.com'
   - '+.cf-ns.net'
   - '+.cf.com'
-  - '+.cf027.com'
   - '+.cf69.com'
   - '+.cf865.com'
   - '+.cfachina.org'
@@ -14374,7 +14368,6 @@ payload:
   - '+.chinasanc.com'
   - '+.chinasatcom.com'
   - '+.chinasb.org'
-  - '+.chinasbsp.com'
   - '+.chinasciencejournal.com'
   - '+.chinascopefinancial.com'
   - '+.chinascrum.org'
@@ -15042,7 +15035,6 @@ payload:
   - '+.cjjjs.com'
   - '+.cjjnff.com'
   - '+.cjk3d.net'
-  - '+.cjkcgs.com'
   - '+.cjkhd.com'
   - '+.cjkj.ink'
   - '+.cjkypo.com'
@@ -16553,6 +16545,7 @@ payload:
   - '+.crecu.com'
   - '+.credibleglass.com'
   - '+.credit-cras.com'
+  - '+.credit100.com'
   - '+.creditcn.com'
   - '+.creditsailing.com'
   - '+.creditxb.com'
@@ -18362,7 +18355,6 @@ payload:
   - '+.diaoyu.com'
   - '+.diaoyu123.com'
   - '+.diaoyu365.com'
-  - '+.diaoyubo.com'
   - '+.diaoyula.com'
   - '+.diaoyuren.com'
   - '+.diaoyuwang.com'
@@ -18470,7 +18462,6 @@ payload:
   - '+.dingdangnao.com'
   - '+.dingdangsheji.com'
   - '+.dingdean.com'
-  - '+.dingdian.la'
   - '+.dingdianku.com'
   - '+.dingdiansk.com'
   - '+.dingdianzw.com'
@@ -19726,7 +19717,6 @@ payload:
   - '+.dyxuexin.com'
   - '+.dyxw.com'
   - '+.dyxz.la'
-  - '+.dyymwy.com'
   - '+.dyys.com'
   - '+.dyysoft.net'
   - '+.dyzdx.com'
@@ -20116,7 +20106,6 @@ payload:
   - '+.echuandan.com'
   - '+.eciawards.org'
   - '+.ecice06.com'
-  - '+.ecig100.com'
   - '+.ecitic.com'
   - '+.ecjson.com'
   - '+.eckjzx.com'
@@ -21132,7 +21121,6 @@ payload:
   - '+.exv9.com'
   - '+.exxstar.com'
   - '+.exxvip.com'
-  - '+.exziyuan.com'
   - '+.ey-app.com'
   - '+.ey99.com'
   - '+.eyangguang.com'
@@ -23055,7 +23043,6 @@ payload:
   - '+.gamexhb.com'
   - '+.gamexz.com'
   - '+.gameyisi.com'
-  - '+.gameyj.com'
   - '+.gamfe.com'
   - '+.gammatimes.com'
   - '+.gamutsoft.com'
@@ -26055,6 +26042,7 @@ payload:
   - '+.hcl100.com'
   - '+.hcmiraefund.com'
   - '+.hcocoa.com'
+  - '+.hcqixinhb.com'
   - '+.hcshebao.com'
   - '+.hcsilk.com'
   - '+.hcsindex.org'
@@ -26328,7 +26316,6 @@ payload:
   - '+.helpmeng.com'
   - '+.helpton.com'
   - '+.heluowenhua.net'
-  - '+.hemabt.com'
   - '+.hemajy.com'
   - '+.hemamax.com'
   - '+.hemanc.com'
@@ -27163,6 +27150,7 @@ payload:
   - '+.homecloud-lab.com'
   - '+.homed.me'
   - '+.homedo.com'
+  - '+.homedt.net'
   - '+.homeinframes.com'
   - '+.homeinmists.com'
   - '+.homeinns.com'
@@ -27207,7 +27195,6 @@ payload:
   - '+.honghe-tech.com'
   - '+.hongheiku.com'
   - '+.honghonghu.com'
-  - '+.honghuahui.xyz'
   - '+.honghuotai.com'
   - '+.hongjiang.info'
   - '+.hongjiejia.com'
@@ -27694,6 +27681,7 @@ payload:
   - '+.huadx.com'
   - '+.huaease.net'
   - '+.huaer.cc'
+  - '+.huafang.com'
   - '+.huafeiw.com'
   - '+.huafeng-food.com'
   - '+.huafeng.com'
@@ -28595,7 +28583,6 @@ payload:
   - '+.hzhltec.com'
   - '+.hzhr.com'
   - '+.hzhuangxiang.com'
-  - '+.hzhuanqu.com'
   - '+.hzhuaxindianzishangwu.com'
   - '+.hzhx.com'
   - '+.hzins.com'
@@ -28608,7 +28595,6 @@ payload:
   - '+.hzjqhy.com'
   - '+.hzjs56.com'
   - '+.hzjunxing.com'
-  - '+.hzjushan.com'
   - '+.hzkayo.com'
   - '+.hzljlyy.com'
   - '+.hzlug.org'
@@ -28640,7 +28626,6 @@ payload:
   - '+.hzsgjj.com'
   - '+.hzshudian.com'
   - '+.hzstad88.com'
-  - '+.hzsxn.com'
   - '+.hzti.com'
   - '+.hztosz.com'
   - '+.hztraining.com'
@@ -29419,7 +29404,6 @@ payload:
   - '+.ihitun.com'
   - '+.ihjiu.com'
   - '+.ihktv.com'
-  - '+.ihlnews.com'
   - '+.ihomefnt.com'
   - '+.ihomesoft.net'
   - '+.ihongma.com'
@@ -29479,7 +29463,6 @@ payload:
   - '+.iikeji.com'
   - '+.iikuzhan.com'
   - '+.iikx.com'
-  - '+.iimzt.com'
   - '+.iincn.net'
   - '+.iiong.com'
   - '+.iipiano.com'
@@ -30147,7 +30130,6 @@ payload:
   - '+.ipinyou.com'
   - '+.ipip.net'
   - '+.ipktv.com'
-  - '+.ipku.cc'
   - '+.ipku.com'
   - '+.iplascloud.com'
   - '+.iplay11g.com'
@@ -30697,7 +30679,6 @@ payload:
   - '+.iximo.com'
   - '+.ixinglu.com'
   - '+.ixingpan.com'
-  - '+.ixinmanzhishe.com'
   - '+.ixinqing.com'
   - '+.ixintui.com'
   - '+.ixinwei.com'
@@ -31621,6 +31602,7 @@ payload:
   - '+.jimucake.com'
   - '+.jimucc.com'
   - '+.jimufund.com'
+  - '+.jimuhezi.com'
   - '+.jimujiazx.com'
   - '+.jin10.com'
   - '+.jin10x.com'
@@ -31757,7 +31739,6 @@ payload:
   - '+.jingzhe.me'
   - '+.jingzhengu.com'
   - '+.jingzhusz.com'
-  - '+.jingzong.org'
   - '+.jinhaidai.com'
   - '+.jinhe-energy.com'
   - '+.jinhengjgj.com'
@@ -34707,7 +34688,6 @@ payload:
   - '+.la-mo.com'
   - '+.lab-z.com'
   - '+.labagd.com'
-  - '+.labahao.com'
   - '+.labbang.com'
   - '+.labbase.net'
   - '+.labfan.com'
@@ -38011,6 +37991,7 @@ payload:
   - '+.meetingmeet.com'
   - '+.meetlawyer.com'
   - '+.meetsite.com'
+  - '+.meetuvip.com'
   - '+.meetwhale.com'
   - '+.meetzoom.net'
   - '+.meeuapp.net'
@@ -38251,7 +38232,6 @@ payload:
   - '+.mengshihm.com'
   - '+.mengso.com'
   - '+.mengtian.com'
-  - '+.mengtu.cc'
   - '+.mengtuchuang.xyz'
   - '+.mengtuiapp.com'
   - '+.mengwuji.net'
@@ -38406,6 +38386,7 @@ payload:
   - '+.mi1.cc'
   - '+.mi6fx.com'
   - '+.mia.com'
+  - '+.miaibox.com'
   - '+.mian4.net'
   - '+.mianbao.com'
   - '+.mianbaodianying.com'
@@ -38519,6 +38500,7 @@ payload:
   - '+.midukanshu.com'
   - '+.miduoke.net'
   - '+.midureader.com'
+  - '+.midust.com'
   - '+.midway.run'
   - '+.midwayjs.org'
   - '+.midymidy.com'
@@ -38776,7 +38758,6 @@ payload:
   - '+.missevan.com'
   - '+.missfresh.net'
   - '+.missku.com'
-  - '+.missquq.com'
   - '+.misstar.com'
   - '+.missyuan.net'
   - '+.misuland.com'
@@ -38788,6 +38769,7 @@ payload:
   - '+.mitiplus.com'
   - '+.mittrchina.com'
   - '+.miui.com'
+  - '+.miuiver.com'
   - '+.miutour.com'
   - '+.miutrip.com'
   - '+.miwifi.com'
@@ -40962,6 +40944,7 @@ payload:
   - '+.ntwikis.com'
   - '+.ntwzy.com'
   - '+.ntxiru.com'
+  - '+.ntyswlkj.com'
   - '+.ntyy888.com'
   - '+.ntzrj.com'
   - '+.nu1l.com'
@@ -41099,7 +41082,6 @@ payload:
   - '+.o2oexpo.com'
   - '+.o2osd.com'
   - '+.o2ting.com'
-  - '+.o2yhq.com'
   - '+.o37o.net'
   - '+.o3ndix.com'
   - '+.o7h.net'
@@ -41347,6 +41329,7 @@ payload:
   - '+.oliyi.com'
   - '+.ollomall.com'
   - '+.olmy8.com'
+  - '+.olo4.com'
   - '+.olymtech.com'
   - '+.omacloud.com'
   - '+.omayse.com'
@@ -41602,7 +41585,6 @@ payload:
   - '+.orient-fund.com'
   - '+.orient-hf.com'
   - '+.orient-safety.com'
-  - '+.orientalgame.com.tw'
   - '+.orientalpearltower.com'
   - '+.orientalwisdom.com'
   - '+.orientcasa.com'
@@ -41982,6 +41964,7 @@ payload:
   - '+.pangong88.com'
   - '+.pangqiu.com'
   - '+.pangshu.com'
+  - '+.pangubox.com'
   - '+.pangukj.com'
   - '+.panguso.com'
   - '+.pangxieke.com'
@@ -42115,6 +42098,7 @@ payload:
   - '+.paxgl.com'
   - '+.paydxm.com'
   - '+.payeco.com'
+  - '+.paykwai.com'
   - '+.paylf.com'
   - '+.paymax.cc'
   - '+.paympay.com'
@@ -43057,6 +43041,7 @@ payload:
   - '+.ppvod.net'
   - '+.ppwan.com'
   - '+.ppwwyyxx.com'
+  - '+.ppx520.com'
   - '+.ppxclub.com'
   - '+.ppxs.net'
   - '+.ppxwo.com'
@@ -43270,7 +43255,6 @@ payload:
   - '+.puwenlong.com'
   - '+.puworld.com'
   - '+.puyuecs.com'
-  - '+.puyuehui.com'
   - '+.puyurumen.com'
   - '+.puzeyf.com'
   - '+.pv001.net'
@@ -45452,7 +45436,6 @@ payload:
   - '+.rizhuti.com'
   - '+.rj-bai.com'
   - '+.rj889.net'
-  - '+.rjchangan.com'
   - '+.rjdk.org'
   - '+.rjghome.com'
   - '+.rjh0.com'
@@ -45520,6 +45503,7 @@ payload:
   - '+.rockbrain.net'
   - '+.rockemb.com'
   - '+.rockerfm.com'
+  - '+.rockflow.tech'
   - '+.rockjitui.com'
   - '+.rockmanlab.net'
   - '+.rockru.com'
@@ -46406,6 +46390,7 @@ payload:
   - '+.sdgw.com'
   - '+.sdgwy.org'
   - '+.sdhangmoguan.com'
+  - '+.sdhbcl.com'
   - '+.sdhdssd.com'
   - '+.sdhk2008.com'
   - '+.sdhoukang.com'
@@ -47093,7 +47078,6 @@ payload:
   - '+.shcsdq.com'
   - '+.shcstheatre.com'
   - '+.shcxzxgs.com'
-  - '+.shcymc.com'
   - '+.shdctp.com'
   - '+.shdjt.com'
   - '+.shdmt.net'
@@ -48690,7 +48674,6 @@ payload:
   - '+.socialark.net'
   - '+.socialbeta.com'
   - '+.socialfishface.com'
-  - '+.socialjia.com'
   - '+.socks1688.com'
   - '+.socolar.com'
   - '+.socomic.com'
@@ -49227,6 +49210,7 @@ payload:
   - '+.sspsky.com'
   - '+.ssqgx.com'
   - '+.ssqzj.com'
+  - '+.ssrcdn.com'
   - '+.ssrcr.com'
   - '+.ssreader.com'
   - '+.ssrrxx.com'
@@ -50222,7 +50206,6 @@ payload:
   - '+.szqt.net'
   - '+.szquanli.com'
   - '+.szrcfw.com'
-  - '+.szrlqy.com'
   - '+.szrrjc.com'
   - '+.szrtcpa.com'
   - '+.szryc.com'
@@ -51390,7 +51373,6 @@ payload:
   - '+.tiejiong.com'
   - '+.tiejp.com'
   - '+.tielemao.com'
-  - '+.tielingcn.com'
   - '+.tielu.org'
   - '+.tiepishihu.com'
   - '+.tiepishihu.hk'
@@ -51655,6 +51637,7 @@ payload:
   - '+.tmdm.com'
   - '+.tmeiju.com'
   - '+.tmeissheng.com'
+  - '+.tmgwdz.vip'
   - '+.tmhong.com'
   - '+.tmhvps.com'
   - '+.tmiep.org'
@@ -52707,7 +52690,6 @@ payload:
   - '+.txsdk.com'
   - '+.txssw.com'
   - '+.txt321.com'
-  - '+.txt81.com'
   - '+.txtbbs.com'
   - '+.txtbook.net'
   - '+.txtduo.com'
@@ -53938,6 +53920,7 @@ payload:
   - '+.viseator.com'
   - '+.vishining.com'
   - '+.visionbbs.com'
+  - '+.visionchinashow.net'
   - '+.visioncloudapi.com'
   - '+.visionly.org'
   - '+.visionsoar.com'
@@ -54103,6 +54086,7 @@ payload:
   - '+.vpsss.net'
   - '+.vpszh.com'
   - '+.vqs.com'
+  - '+.vqu.show'
   - '+.vqudo.com'
   - '+.vqudochina.com'
   - '+.vr-cat.com'
@@ -54526,6 +54510,7 @@ payload:
   - '+.wangyajie.wang'
   - '+.wangyanpiano.com'
   - '+.wangye.com'
+  - '+.wangyeyixia.com'
   - '+.wangyin.com'
   - '+.wangyou.com'
   - '+.wangyou2.com'
@@ -54869,7 +54854,6 @@ payload:
   - '+.webxgame.com'
   - '+.webxin.com'
   - '+.webxmf.com'
-  - '+.webxueyuan.com'
   - '+.webyang.net'
   - '+.wecarepet.com'
   - '+.wecash.net'
@@ -55987,7 +55971,6 @@ payload:
   - '+.wjyw.com'
   - '+.wjz0098.me'
   - '+.wjzj.vip'
-  - '+.wk-foryou.com'
   - '+.wk007.com'
   - '+.wk2.com'
   - '+.wk78.com'
@@ -58162,6 +58145,7 @@ payload:
   - '+.xingpan.com'
   - '+.xingpin.com'
   - '+.xingqiu.tv'
+  - '+.xingqiu520.com'
   - '+.xingqu11.com'
   - '+.xingren.com'
   - '+.xingrongn.com'
@@ -58514,6 +58498,7 @@ payload:
   - '+.xiyow.com'
   - '+.xiyuan.tv'
   - '+.xiyuege.com'
+  - '+.xiyufine.com'
   - '+.xiyun.net'
   - '+.xiyurumen.com'
   - '+.xizangguolv.net'
@@ -60308,7 +60293,6 @@ payload:
   - '+.yijia.com'
   - '+.yijiaer.com'
   - '+.yijian119.com'
-  - '+.yijiangshan.net'
   - '+.yijianjiaoyu.com'
   - '+.yijianjiexi.com'
   - '+.yijianxiu.com'
@@ -62309,6 +62293,7 @@ payload:
   - '+.yyds.co'
   - '+.yydzh.com'
   - '+.yyearth.com'
+  - '+.yyes.shop'
   - '+.yyestar.com'
   - '+.yyetss.com'
   - '+.yyfangchan.com'
@@ -63430,6 +63415,7 @@ payload:
   - '+.zhiqiapp.com'
   - '+.zhiquansheng.com'
   - '+.zhiquanxia.com'
+  - '+.zhiquapp.com'
   - '+.zhiquyuan.com'
   - '+.zhiread.com'
   - '+.zhiren.com'
@@ -63579,7 +63565,6 @@ payload:
   - '+.zhongguoxianhua.com'
   - '+.zhongguoyimin.net'
   - '+.zhongguoym.com'
-  - '+.zhongh.com'
   - '+.zhonghaitech.com'
   - '+.zhonghegame.com'
   - '+.zhonghhd.com'
