--- a/AppleCN.yaml
+++ b/AppleCN.yaml
@@ -58,6 +58,8 @@ payload:
   - '+.gspe21-ssl.ls.apple.com'
   - '+.gspe21.ls.apple.com'
   - '+.gspe35-ssl.ls.apple.com'
+  - '+.guzzoni-apple-com.v.aaplimg.com'
+  - '+.guzzoni.apple.com'
   - '+.iadsdk.apple.com'
   - '+.icloud-cdn.icloud.com.akadns.net'
   - '+.icloud.cdn-apple.com'
