--- a/directbak.yaml
+++ b/directbak.yaml
@@ -5515,7 +5515,6 @@ payload:
   - '+.70yx.com'
   - '+.71.com'
   - '+.71.net'
-  - '+.710071.net'
   - '+.71133.com'
   - '+.7116dns.com'
   - '+.711pr.com'
@@ -8591,7 +8590,6 @@ payload:
   - '+.animationcritics.com'
   - '+.animetaste.net'
   - '+.anitama.net'
-  - '+.anitoys.com'
   - '+.aniu.so'
   - '+.aniu.tv'
   - '+.anix.xyz'
@@ -12358,7 +12356,6 @@ payload:
   - '+.caihongto.com'
   - '+.caihuaw.com'
   - '+.caij100.com'
-  - '+.caijing28.com'
   - '+.caijing365.com'
   - '+.caijingcaipiao22270.com'
   - '+.caijingche.com'
@@ -18368,7 +18365,6 @@ payload:
   - '+.diaoyu.com'
   - '+.diaoyu123.com'
   - '+.diaoyu365.com'
-  - '+.diaoyula.com'
   - '+.diaoyuren.com'
   - '+.diaoyuwang.com'
   - '+.diaoyuwo.com'
@@ -18914,6 +18910,7 @@ payload:
   - '+.dogedoge.com'
   - '+.dogfight360.com'
   - '+.dogimg.com'
+  - '+.doglg.com'
   - '+.doglobal.net'
   - '+.dogmr.com'
   - '+.dogwhere.com'
@@ -19266,7 +19263,6 @@ payload:
   - '+.drclvs.com'
   - '+.drcuiyutao.com'
   - '+.drdrq.com'
-  - '+.dre8.com'
   - '+.dream-loft.com'
   - '+.dream.ren'
   - '+.dream1986.com'
@@ -19425,6 +19421,7 @@ payload:
   - '+.dudumeijia.com'
   - '+.duduyu.net'
   - '+.duelcn.com'
+  - '+.dugoogle.com'
   - '+.duguying.net'
   - '+.duhao.net'
   - '+.dui.ai'
@@ -21739,7 +21736,6 @@ payload:
   - '+.feiku.com'
   - '+.feiliao.com'
   - '+.feiliks.com'
-  - '+.feilong.me'
   - '+.feilu.cc'
   - '+.feilvway.com'
   - '+.feimalv.com'
@@ -27150,6 +27146,7 @@ payload:
   - '+.hollycrm.com'
   - '+.hollysys.com'
   - '+.hollyuc.com'
+  - '+.hollywant.com'
   - '+.holoalpha.com'
   - '+.holoem.com'
   - '+.hologres.io'
@@ -30805,7 +30802,6 @@ payload:
   - '+.izt6.com'
   - '+.izt8.com'
   - '+.iztwp.com'
-  - '+.iztyy.com'
   - '+.izuche.com'
   - '+.izuchecdn.com'
   - '+.izuiyou.com'
@@ -31388,7 +31384,6 @@ payload:
   - '+.jianyujiasu.com'
   - '+.jianyuweb.com'
   - '+.jianyv.com'
-  - '+.jianzhanapp.com'
   - '+.jianzhanbao.net'
   - '+.jianzhangongsi.com'
   - '+.jianzhi.net'
@@ -34591,8 +34586,6 @@ payload:
   - '+.kuyun.com'
   - '+.kuzhazha.com'
   - '+.kuzhengame.com'
-  - '+.kveaa.com'
-  - '+.kvecc.com'
   - '+.kveff.com'
   - '+.kveii.com'
   - '+.kvemm.com'
@@ -35560,7 +35553,6 @@ payload:
   - '+.lghsrh.com'
   - '+.lgimg.com'
   - '+.lgmi.com'
-  - '+.lgmjg.com'
   - '+.lgo100.com'
   - '+.lgpic.com'
   - '+.lgstatic.com'
@@ -36035,7 +36027,6 @@ payload:
   - '+.linuxbaodian.com'
   - '+.linuxboy.net'
   - '+.linuxcool.com'
-  - '+.linuxdaxue.com'
   - '+.linuxde.net'
   - '+.linuxdiyf.com'
   - '+.linuxdot.net'
@@ -40226,7 +40217,6 @@ payload:
   - '+.neeu.com'
   - '+.negroupedu.org'
   - '+.neigou.com'
-  - '+.neihan8.com'
   - '+.neihanshequ.com'
   - '+.neisha.cc'
   - '+.neitui.com'
@@ -40982,7 +40972,6 @@ payload:
   - '+.nuan.io'
   - '+.nuandao.com'
   - '+.nuanjiayuan.com'
-  - '+.nuanmaoer.com'
   - '+.nuannuanzu.com'
   - '+.nuanshi100.com'
   - '+.nuanyuehanxing.com'
@@ -41300,7 +41289,6 @@ payload:
   - '+.okex.win'
   - '+.okeycar.com'
   - '+.okfri.com'
-  - '+.okgj.com'
   - '+.okhimalayanzi.com'
   - '+.okhqb.com'
   - '+.okidc.com'
@@ -52857,7 +52845,6 @@ payload:
   - '+.u17.com'
   - '+.u17i.com'
   - '+.u17t.com'
-  - '+.u193.com'
   - '+.u21a.com'
   - '+.u22e.com'
   - '+.u2j2ha.com'
@@ -55754,7 +55741,6 @@ payload:
   - '+.whzyblh.com'
   - '+.whzydz.com'
   - '+.whzyht.com'
-  - '+.whzyy.net'
   - '+.wiblog.net'
   - '+.wicep.com'
   - '+.wicp.net'
@@ -58334,7 +58320,6 @@ payload:
   - '+.xinstall.com'
   - '+.xinstatic.com'
   - '+.xinsui.net'
-  - '+.xintaileju.com'
   - '+.xintaizhou.com'
   - '+.xintheme.com'
   - '+.xintiao100.com'
@@ -62365,7 +62350,6 @@ payload:
   - '+.yyming2.com'
   - '+.yymoban.com'
   - '+.yyouren.com'
-  - '+.yypcb.com'
   - '+.yypm.com'
   - '+.yypt.com'
   - '+.yyq.com'
@@ -64687,7 +64671,6 @@ payload:
   - '+.zssph.com'
   - '+.zssxczxyey.com'
   - '+.zstack.io'
-  - '+.zstczx.com'
   - '+.zstzs.com'
   - '+.zsucai.com'
   - '+.zsucai.net'
