--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2141,7 +2141,6 @@ payload:
   - '+.22edu.com'
   - '+.22ff.com'
   - '+.22hd.com'
-  - '+.22hyk.com'
   - '+.22ja.com'
   - '+.22k9.com'
   - '+.22lianmeng.com'
@@ -3482,7 +3481,6 @@ payload:
   - '+.44971.com'
   - '+.44dt.com'
   - '+.44england.com'
-  - '+.44hyk.com'
   - '+.44pd.com'
   - '+.44pq.co'
   - '+.44vs.com'
@@ -4653,7 +4651,6 @@ payload:
   - '+.55hl.com'
   - '+.55hl.net'
   - '+.55home.com'
-  - '+.55hyk.com'
   - '+.55i8.com'
   - '+.55idc.com'
   - '+.55jisu.com'
@@ -5942,7 +5939,6 @@ payload:
   - '+.8080i.com'
   - '+.8081.net'
   - '+.80881.com'
-  - '+.808cdn.com'
   - '+.808w.com'
   - '+.8090.com'
   - '+.8090.pk'
@@ -7196,7 +7192,6 @@ payload:
   - '+.a1166.com'
   - '+.a135.net'
   - '+.a166.com'
-  - '+.a1714.com'
   - '+.a2048.com'
   - '+.a21fs.com'
   - '+.a21yishion.com'
@@ -8346,6 +8341,7 @@ payload:
   - '+.aliyunfuwuqi.com'
   - '+.aliyunga0017.com'
   - '+.aliyunga0018.com'
+  - '+.aliyunga0019.com'
   - '+.aliyungf.com'
   - '+.aliyunhelp.com'
   - '+.aliyunhn.com'
@@ -17153,7 +17149,6 @@ payload:
   - '+.czongyi.com'
   - '+.czopen.com'
   - '+.czpoly.com'
-  - '+.czqfloor.com'
   - '+.czrj.com'
   - '+.czry888.com'
   - '+.czsbtjx.com'
@@ -25901,7 +25896,6 @@ payload:
   - '+.hbjdxt.com'
   - '+.hbjhc.com'
   - '+.hbjhpx.com'
-  - '+.hbjhyh.com'
   - '+.hbjianzhuwang.com'
   - '+.hbjimin.com'
   - '+.hbjinnong.com'
@@ -26562,7 +26556,6 @@ payload:
   - '+.hgzrc.com'
   - '+.hh-gltd.com'
   - '+.hh010.com'
-  - '+.hh04.com'
   - '+.hh1488.com'
   - '+.hhailuo.com'
   - '+.hhbg123.com'
@@ -40467,6 +40460,7 @@ payload:
   - '+.nhbhpx.club'
   - '+.nhdmd.com'
   - '+.nhganggeban.com'
+  - '+.nhhwhxh.com'
   - '+.nhnexpo.com'
   - '+.nhnsc.com'
   - '+.nhnst.com'
@@ -41675,7 +41669,6 @@ payload:
   - '+.oswdj.com'
   - '+.oswhy.com'
   - '+.osx.cx'
-  - '+.osyum.com'
   - '+.osyunwei.com'
   - '+.otcgd.com'
   - '+.otcms.com'
@@ -43958,7 +43951,6 @@ payload:
   - '+.qingfo.com'
   - '+.qingfuwucdn.net'
   - '+.qingfuyun.com'
-  - '+.qingfuzaixian.com'
   - '+.qinggl.com'
   - '+.qingguo.com'
   - '+.qinghe.tv'
@@ -50499,6 +50491,7 @@ payload:
   - '+.tangmi.net'
   - '+.tangobrowser.net'
   - '+.tangongye.com'
+  - '+.tangqingtuia1.com'
   - '+.tangrenjv.com'
   - '+.tangruiqian.com'
   - '+.tangsanshu.com'
@@ -51633,6 +51626,7 @@ payload:
   - '+.tlfw.net'
   - '+.tlightsky.com'
   - '+.tlinx.com'
+  - '+.tlivepush.com'
   - '+.tljcw.com'
   - '+.tljob8001.com'
   - '+.tlkzs.com'
@@ -52243,7 +52237,6 @@ payload:
   - '+.tsyzm.com'
   - '+.tsz.com'
   - '+.tszckj.com'
-  - '+.tszs360.com'
   - '+.tszyzx.com'
   - '+.tt-bike.com'
   - '+.tt-ly.com'
@@ -52281,7 +52274,6 @@ payload:
   - '+.ttkmj.org'
   - '+.ttkuan.com'
   - '+.ttkxh.com'
-  - '+.ttkyy.net'
   - '+.ttll.cc'
   - '+.ttlsa.com'
   - '+.ttmark.com'
