--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1526,7 +1526,6 @@ payload:
   - '+.17cai.com'
   - '+.17caifu.com'
   - '+.17ce.com'
-  - '+.17chacn.com'
   - '+.17chuang.cc'
   - '+.17coding.info'
   - '+.17cx.com'
@@ -1645,6 +1644,7 @@ payload:
   - '+.17zhuangxiu.com'
   - '+.17ziti.com'
   - '+.17zixue.com'
+  - '+.17zjh.com'
   - '+.17zub.com'
   - '+.17zuoye.com'
   - '+.17zuoye.net'
@@ -1838,7 +1838,6 @@ payload:
   - '+.1kuang.com'
   - '+.1kx.me'
   - '+.1kxun.com'
-  - '+.1ky.biz'
   - '+.1lan.tv'
   - '+.1lewen.com'
   - '+.1look.tv'
@@ -3196,7 +3195,6 @@ payload:
   - '+.3dhoo.com'
   - '+.3dinlife.com'
   - '+.3dinnet.com'
-  - '+.3dkezhan.com'
   - '+.3dkk.com'
   - '+.3dkunshan.com'
   - '+.3dllc.cc'
@@ -3887,6 +3885,7 @@ payload:
   - '+.51gme.com'
   - '+.51golife.com'
   - '+.51gongxiao.com'
+  - '+.51goods.vip'
   - '+.51google.com'
   - '+.51gouke.com'
   - '+.51goupiao.com'
@@ -4814,7 +4813,6 @@ payload:
   - '+.58kuaipai.com'
   - '+.58kuku.com'
   - '+.58meizhuo.com'
-  - '+.58moneys.com'
   - '+.58moto.com'
   - '+.58net.com'
   - '+.58pic.com'
@@ -5060,6 +5058,7 @@ payload:
   - '+.5thspace.net'
   - '+.5thspace.org'
   - '+.5tps.vip'
+  - '+.5tscm.com'
   - '+.5u18.com'
   - '+.5u3d.com'
   - '+.5u588.com'
@@ -5280,7 +5279,6 @@ payload:
   - '+.668app.com'
   - '+.668lw.com'
   - '+.668map.com'
-  - '+.668news.com'
   - '+.6695.com'
   - '+.6699pj.com'
   - '+.669pic.com'
@@ -6178,7 +6176,6 @@ payload:
   - '+.87yy.com'
   - '+.88-z.com'
   - '+.88.com'
-  - '+.8800.org'
   - '+.8800808.com'
   - '+.8801.net'
   - '+.880114.com'
@@ -6508,6 +6505,7 @@ payload:
   - '+.91jin.com'
   - '+.91jinrong.com'
   - '+.91jinshu.com'
+  - '+.91jiujige.com'
   - '+.91jkj.com'
   - '+.91jkys.com'
   - '+.91jm.com'
@@ -7236,6 +7234,7 @@ payload:
   - '+.aayis.com'
   - '+.ab126.com'
   - '+.ab173.com'
+  - '+.ab365.com'
   - '+.ab8499.cc'
   - '+.ab95569.com'
   - '+.abab.com'
@@ -7840,6 +7839,7 @@ payload:
   - '+.aigodiy.com'
   - '+.aigou.com'
   - '+.aigtek.com'
+  - '+.aiguhuishou.com'
   - '+.aigupiao.com'
   - '+.aihaisi.com'
   - '+.aihala.com'
@@ -8917,7 +8917,6 @@ payload:
   - '+.appbsl.com'
   - '+.appbyme.com'
   - '+.appbz.info'
-  - '+.appc1.com'
   - '+.appchina.com'
   - '+.appchizi.com'
   - '+.appcoo.com'
@@ -10847,6 +10846,7 @@ payload:
   - '+.binuoniu.com'
   - '+.binvul.com'
   - '+.binyin.com'
+  - '+.binzc.com'
   - '+.binzhi.com'
   - '+.binzhouquan.com'
   - '+.binzhuang.com'
@@ -11861,7 +11861,6 @@ payload:
   - '+.btdad17.xyz'
   - '+.btdog.com'
   - '+.btdtech.net'
-  - '+.btege.com'
   - '+.btgame.com'
   - '+.btgame01.com'
   - '+.btgang.com'
@@ -14866,6 +14865,7 @@ payload:
   - '+.ciamiecn.com'
   - '+.ciaoca.com'
   - '+.ciatcm.org'
+  - '+.cibaike.com'
   - '+.cibfintech.com'
   - '+.cibn.cc'
   - '+.cibn.com'
@@ -16175,6 +16175,7 @@ payload:
   - '+.coodub.com'
   - '+.coofans.com'
   - '+.cooffee.net'
+  - '+.cooh5.com'
   - '+.coohua.com'
   - '+.cookbookchina.com'
   - '+.cookcai.com'
@@ -17766,6 +17767,7 @@ payload:
   - '+.dcarimg.com'
   - '+.dcarstatic.com'
   - '+.dcarvod.com'
+  - '+.dcatgame.com'
   - '+.dcb123.com'
   - '+.dcdapp.com'
   - '+.dcement.com'
@@ -17866,6 +17868,7 @@ payload:
   - '+.ddxq.mobi'
   - '+.ddxs.cc'
   - '+.ddxstxt8.com'
+  - '+.ddyqh.com'
   - '+.ddyun.com'
   - '+.ddyun123.com'
   - '+.ddyvip.com'
@@ -18057,7 +18060,6 @@ payload:
   - '+.devexpresscn.com'
   - '+.devio.org'
   - '+.devkang.com'
-  - '+.devops-master.com'
   - '+.devpss.com'
   - '+.devqinwei.com'
   - '+.devsiki.com'
@@ -19239,7 +19241,6 @@ payload:
   - '+.dragon-guide.net'
   - '+.dragon-hotel.com'
   - '+.dragonballcn.com'
-  - '+.dragoncg.com'
   - '+.dragonest.com'
   - '+.dragonnewsru.com'
   - '+.dragonparking.com'
@@ -19306,7 +19307,6 @@ payload:
   - '+.drupalla.com'
   - '+.drupalproject.org'
   - '+.drv.tw'
-  - '+.drvics.com'
   - '+.drvsky.com'
   - '+.drwfggc.com'
   - '+.ds-360.com'
@@ -19430,6 +19430,7 @@ payload:
   - '+.duimg.com'
   - '+.duimin.com'
   - '+.duiopen.com'
+  - '+.duishu.com'
   - '+.duitang.com'
   - '+.duitianhe.com'
   - '+.duizhuang.com'
@@ -20736,6 +20737,7 @@ payload:
   - '+.eprezi.com'
   - '+.eps114.com'
   - '+.epschool.net'
+  - '+.epstsoft.com'
   - '+.epub360.com'
   - '+.epubchina.com'
   - '+.epubit.com'
@@ -21265,7 +21267,6 @@ payload:
   - '+.facecloud.net'
   - '+.facehufu.com'
   - '+.faceid.com'
-  - '+.faceminiproject.online'
   - '+.faceplusplus.com'
   - '+.faceu.mobi'
   - '+.faceu.net'
@@ -24481,6 +24482,7 @@ payload:
   - '+.guangdauser.com'
   - '+.guangdianyun.tv'
   - '+.guangdiu.com'
+  - '+.guangdv.com'
   - '+.guangfeng.com'
   - '+.guanggao.com'
   - '+.guanggua.com'
@@ -24492,6 +24494,7 @@ payload:
   - '+.guangka.com'
   - '+.guangkatf.com'
   - '+.guangli88.com'
+  - '+.guanglilvyuan.com'
   - '+.guanglunshiji.com'
   - '+.guangminggame.com'
   - '+.guangmingjx.com'
@@ -24640,11 +24643,11 @@ payload:
   - '+.guodongbaohe.com'
   - '+.guodu.com'
   - '+.guodu.hk'
-  - '+.guoers.com'
   - '+.guofen.com'
   - '+.guofenchaxun.com'
   - '+.guofenchaxun.net'
   - '+.guoguo-app.com'
+  - '+.guoguofen.com'
   - '+.guohanlawfirm.com'
   - '+.guohead.com'
   - '+.guohexinxiang.com'
@@ -24689,6 +24692,7 @@ payload:
   - '+.guotv.com'
   - '+.guowaidiaocha.com'
   - '+.guowaitianqi.com'
+  - '+.guoxiehao.com'
   - '+.guoxingjun.com'
   - '+.guoxinqh.com'
   - '+.guoxue.com'
@@ -25593,6 +25597,7 @@ payload:
   - '+.haojiameng.net'
   - '+.haojiaolian.com'
   - '+.haojing.org'
+  - '+.haojit.com'
   - '+.haojue.com'
   - '+.haojue163.com'
   - '+.haokan.com'
@@ -25986,7 +25991,6 @@ payload:
   - '+.hbtengniu.com'
   - '+.hbtobacco.com'
   - '+.hbtxbaidu.com'
-  - '+.hbtybio.com'
   - '+.hbtycp.com'
   - '+.hbwh.net'
   - '+.hbwhcyw.com'
@@ -27674,6 +27678,7 @@ payload:
   - '+.huabokeji.com'
   - '+.huacaomu.com'
   - '+.huacaoshumu.net'
+  - '+.huace.co'
   - '+.huacemedia.com'
   - '+.huacenter.com'
   - '+.huachao.vip'
@@ -28071,13 +28076,13 @@ payload:
   - '+.huion.com'
   - '+.huiqiangkeji.com'
   - '+.huiqudsp.com'
-  - '+.huirendai.com'
   - '+.huiris.com'
   - '+.huishangbao.com'
   - '+.huishangol.com'
   - '+.huishenghuo888888.com'
   - '+.huishengqianzhushou.com'
   - '+.huishoubao.com'
+  - '+.huishoubaojiadan.com'
   - '+.huishoushang.com'
   - '+.huishuaka.com'
   - '+.huishuang.xyz'
@@ -28593,6 +28598,7 @@ payload:
   - '+.hzhfzx.com'
   - '+.hzhike.com'
   - '+.hzhisoft.com'
+  - '+.hzhlpt.com'
   - '+.hzhltec.com'
   - '+.hzhr.com'
   - '+.hzhuangxiang.com'
@@ -28627,6 +28633,7 @@ payload:
   - '+.hzpzs.net'
   - '+.hzqf123.com'
   - '+.hzqiuxue.com'
+  - '+.hzqlpt.com'
   - '+.hzqx.com'
   - '+.hzr1.com'
   - '+.hzrc.com'
@@ -28685,6 +28692,7 @@ payload:
   - '+.i-element.org'
   - '+.i-ev.com'
   - '+.i-excellence.com'
+  - '+.i-firefly.com'
   - '+.i-hifi.com'
   - '+.i-jim.com'
   - '+.i-kan.me'
@@ -29819,6 +29827,7 @@ payload:
   - '+.imwaco.com'
   - '+.imwallet.com'
   - '+.imweb.io'
+  - '+.imweia.com'
   - '+.imwexpo.com'
   - '+.imwork.net'
   - '+.imxh.com'
@@ -30709,6 +30718,7 @@ payload:
   - '+.ixu.me'
   - '+.ixueshu.com'
   - '+.ixueyi.com'
+  - '+.ixunke.com'
   - '+.iy51.com'
   - '+.iyangcong.com'
   - '+.iyaou.com'
@@ -31407,7 +31417,6 @@ payload:
   - '+.jiaoran.net'
   - '+.jiaoshouhuayuan.com'
   - '+.jiaoshouwang.com'
-  - '+.jiaosm.com'
   - '+.jiaotou.org'
   - '+.jiaoyimao.com'
   - '+.jiaoyin.com'
@@ -31646,6 +31655,7 @@ payload:
   - '+.jindidata.com'
   - '+.jindingfm.com'
   - '+.jindong.org'
+  - '+.jindongsoft.com'
   - '+.jindun007.net'
   - '+.jindunfan.com'
   - '+.jinduoduo.net'
@@ -31772,6 +31782,7 @@ payload:
   - '+.jinke3d.com'
   - '+.jinkejoy.com'
   - '+.jinkex.com'
+  - '+.jinkezhexin.com'
   - '+.jinkosolar.com'
   - '+.jinku.com'
   - '+.jinlaiba.com'
@@ -32757,6 +32768,7 @@ payload:
   - '+.juesheng.com'
   - '+.juewei.com'
   - '+.juexiang.com'
+  - '+.juexiaotime.com'
   - '+.jufaanli.com'
   - '+.jufengshang.com'
   - '+.jufidc.com'
@@ -33142,7 +33154,6 @@ payload:
   - '+.jz-cert.com'
   - '+.jz-job.com'
   - '+.jz0045.com'
-  - '+.jz0574.com'
   - '+.jz08.com'
   - '+.jz100.com'
   - '+.jz177.com'
@@ -33267,7 +33278,6 @@ payload:
   - '+.kahao123.com'
   - '+.kai-ying.com'
   - '+.kaiba315.com'
-  - '+.kaibo5888.com'
   - '+.kaiboda.org'
   - '+.kaiboer.com'
   - '+.kaichengschool.com'
@@ -33395,7 +33405,6 @@ payload:
   - '+.kangyueshi.com'
   - '+.kangze.com'
   - '+.kangzhi.com'
-  - '+.kanhaiwai.com'
   - '+.kanimg.com'
   - '+.kaniuquan.com'
   - '+.kanjia.com'
@@ -33959,6 +33968,8 @@ payload:
   - '+.kkminer.com'
   - '+.kkmop.com'
   - '+.kknn.com'
+  - '+.kknss.com'
+  - '+.kkoot.com'
   - '+.kkr5.com'
   - '+.kkredian.com'
   - '+.kks.me'
@@ -34044,6 +34055,7 @@ payload:
   - '+.knewbi.com'
   - '+.knewone.com'
   - '+.knewsmart.com'
+  - '+.knnnd.com'
   - '+.knotesapp.com'
   - '+.know88.com'
   - '+.knowgive.com'
@@ -34059,6 +34071,7 @@ payload:
   - '+.knoya.com'
   - '+.knsheng.com'
   - '+.knsyxw.com'
+  - '+.kntn.tech'
   - '+.knzlcq.com'
   - '+.koal.com'
   - '+.koalacam.net'
@@ -35315,6 +35328,7 @@ payload:
   - '+.leitingjunshi.com'
   - '+.leitool.com'
   - '+.leiue.com'
+  - '+.leixue.com'
   - '+.leiyunge.com'
   - '+.leiyunge.net'
   - '+.lejiachao.com'
@@ -35593,6 +35607,7 @@ payload:
   - '+.liangduiban.com'
   - '+.liangjan.com'
   - '+.liangjianghu.com'
+  - '+.liangjihui.com'
   - '+.liangka.vip'
   - '+.liangkun.net'
   - '+.liangle.com'
@@ -36781,7 +36796,6 @@ payload:
   - '+.lrscloud3.com'
   - '+.lrswl.com'
   - '+.lrts.me'
-  - '+.ls-17.com'
   - '+.ls-gb.com'
   - '+.ls-marathon.com'
   - '+.ls.link'
@@ -37051,6 +37065,7 @@ payload:
   - '+.lvcheng.com'
   - '+.lvchicar.com'
   - '+.lvcrown.com'
+  - '+.lvdhb.com'
   - '+.lvdoutang.com'
   - '+.lvfang.cc'
   - '+.lvfl.net'
@@ -37629,7 +37644,6 @@ payload:
   - '+.manhualang.com'
   - '+.manhuama.net'
   - '+.manhuang.org'
-  - '+.manhuaniu.com'
   - '+.manhuapi.com'
   - '+.manhuaren.com'
   - '+.manhuatai.com'
@@ -38181,7 +38195,6 @@ payload:
   - '+.meiyaapp.com'
   - '+.meiyan.com'
   - '+.meiyedana.com'
-  - '+.meiyen.com'
   - '+.meiyi.ai'
   - '+.meiyinji.vip'
   - '+.meiyixia.com'
@@ -39896,6 +39909,7 @@ payload:
   - '+.mywhh.com'
   - '+.mywll.com'
   - '+.mywood.cc'
+  - '+.myworld6.com'
   - '+.myxypt.com'
   - '+.myyishu.com'
   - '+.myyj.net'
@@ -39914,6 +39928,7 @@ payload:
   - '+.mzbei.com'
   - '+.mzboss.com'
   - '+.mzeyes.com'
+  - '+.mzfanyi.vip'
   - '+.mzfile.com'
   - '+.mzfxw.com'
   - '+.mzgtuan.com'
@@ -42578,6 +42593,7 @@ payload:
   - '+.pinganfang.com'
   - '+.pinganwj.com'
   - '+.pinganyun.com'
+  - '+.pinganzhengyang.com'
   - '+.pingcap.com'
   - '+.pingcoo.com'
   - '+.pingfangx.com'
@@ -44338,7 +44354,6 @@ payload:
   - '+.qq163.com'
   - '+.qq190.com'
   - '+.qq2009.com'
-  - '+.qq214.com'
   - '+.qq387.com'
   - '+.qq5.com'
   - '+.qq52o.me'
@@ -44725,6 +44740,7 @@ payload:
   - '+.qunliao.info'
   - '+.qunmi.vip'
   - '+.qunniao.com'
+  - '+.qunonnet.com'
   - '+.qunqun.mobi'
   - '+.qunsou.co'
   - '+.quntuishou.com'
@@ -44737,6 +44753,7 @@ payload:
   - '+.qupaicloud.com'
   - '+.qupeiyin.com'
   - '+.qupf.com'
+  - '+.qupingce.com'
   - '+.qupuji.com'
   - '+.quqi.com'
   - '+.quqiaoqiao.com'
@@ -45403,7 +45420,6 @@ payload:
   - '+.riji001.com'
   - '+.rijigu.com'
   - '+.rijiwang.com'
-  - '+.riju.tv'
   - '+.rijutv.co'
   - '+.rikka.app'
   - '+.rilvtong.com'
@@ -46000,7 +46016,6 @@ payload:
   - '+.saipujiaoyu.com'
   - '+.sairaicc.com'
   - '+.sairui020.com'
-  - '+.saite-xdc.com'
   - '+.saitjr.com'
   - '+.saiyangame.com'
   - '+.saiyouedu.net'
@@ -46164,7 +46179,6 @@ payload:
   - '+.sbiquge.com'
   - '+.sbk-h5.com'
   - '+.sbkh5.com'
-  - '+.sbkk8.com'
   - '+.sblunwen.com'
   - '+.sbo8.com'
   - '+.sbr-info.com'
@@ -46765,6 +46779,7 @@ payload:
   - '+.sforest.in'
   - '+.sfpgmk.com'
   - '+.sfplay.net'
+  - '+.sfvip1.com'
   - '+.sfwxf.com'
   - '+.sfyb.com'
   - '+.sfygroup.com'
@@ -47216,7 +47231,6 @@ payload:
   - '+.shenqibuy.com'
   - '+.shenqiwunet.com'
   - '+.shenquol.com'
-  - '+.shenrennn.com'
   - '+.shenrongda.com'
   - '+.shenruan.org'
   - '+.shenshi777.com'
@@ -48344,7 +48358,6 @@ payload:
   - '+.sjzxtsh.com'
   - '+.sjzyu.com'
   - '+.sjzyz.net'
-  - '+.sjzz.cc'
   - '+.sjzzimu.com'
   - '+.sk163.com'
   - '+.sk1999.com'
@@ -48547,6 +48560,7 @@ payload:
   - '+.smgjj.com'
   - '+.smgstar.com'
   - '+.smhdoto.com'
+  - '+.smhsw.com'
   - '+.smhyplay.com'
   - '+.smianet.com'
   - '+.smic-sh.com'
@@ -49077,6 +49091,7 @@ payload:
   - '+.splayer.work'
   - '+.splmcn.com'
   - '+.spnchinaren.com'
+  - '+.spockker.com'
   - '+.spoience.com'
   - '+.spointdesign.com'
   - '+.spongeliu.com'
@@ -49235,6 +49250,7 @@ payload:
   - '+.sst-sd.com'
   - '+.sswchina.com'
   - '+.ssxf.net'
+  - '+.ssxxp.com'
   - '+.ssyar.com'
   - '+.ssyer.com'
   - '+.ssyule.com'
@@ -49528,6 +49544,7 @@ payload:
   - '+.suiyueyule.com'
   - '+.suizhoushi.com'
   - '+.suizui.net'
+  - '+.sujh.net'
   - '+.sukimad.com'
   - '+.sukiu.net'
   - '+.sukkaw.com'
@@ -50229,8 +50246,6 @@ payload:
   - '+.szsczx.com'
   - '+.szseafoodexpo.com'
   - '+.szshequ.org'
-  - '+.szshinp.com'
-  - '+.szshjkj.com'
   - '+.szsia.com'
   - '+.szsing.com'
   - '+.szsjtjj.com'
@@ -50659,6 +50674,7 @@ payload:
   - '+.taoyizhu.com'
   - '+.taoyuantravel.com'
   - '+.taozaisheng.com'
+  - '+.taozhuo.com'
   - '+.taozhutu.com'
   - '+.tapapis.com'
   - '+.tapas.net'
@@ -52564,6 +52580,7 @@ payload:
   - '+.tutuapp.com'
   - '+.tutucloud.com'
   - '+.tutuge.me'
+  - '+.tutuguai.com'
   - '+.tutuim.com'
   - '+.tutupan.com'
   - '+.tuvrblog.com'
@@ -53373,6 +53390,7 @@ payload:
   - '+.use-trust.com'
   - '+.useaudio.com'
   - '+.usecubes.com'
+  - '+.userbp.com'
   - '+.userhostting.com'
   - '+.userresearch.net'
   - '+.useryun.net'
@@ -53420,6 +53438,7 @@ payload:
   - '+.utovr.com'
   - '+.utransm.com'
   - '+.uttjhu.xyz'
+  - '+.uu-xs.net'
   - '+.uu.cc'
   - '+.uu.me'
   - '+.uu1.com'
@@ -55131,6 +55150,7 @@ payload:
   - '+.weixinyunduan.com'
   - '+.weixistyle.com'
   - '+.weixiu2.com'
+  - '+.weixiuchu.com'
   - '+.weixiuka.com'
   - '+.weixue100.com'
   - '+.weixueyuan.net'
@@ -55770,6 +55790,7 @@ payload:
   - '+.wilddog.com'
   - '+.wilddream.net'
   - '+.wildgun.net'
+  - '+.willapps.com'
   - '+.willcdn.com'
   - '+.willmao.com'
   - '+.willsemi.com'
@@ -56336,6 +56357,7 @@ payload:
   - '+.wowotuan.com'
   - '+.wowoyoo.com'
   - '+.wowoyou.com'
+  - '+.wowoyou.net'
   - '+.wowqu.cc'
   - '+.wowsai.com'
   - '+.wowys.com'
@@ -57020,7 +57042,6 @@ payload:
   - '+.xa9t.com'
   - '+.xaahjy.com'
   - '+.xabbp.com'
-  - '+.xabbs.com'
   - '+.xabcdns.com'
   - '+.xabcloud.com'
   - '+.xacbank.com'
@@ -57717,7 +57738,6 @@ payload:
   - '+.xiaolee.net'
   - '+.xiaoliangkou.com'
   - '+.xiaoliebian.com'
-  - '+.xiaoliketang.com'
   - '+.xiaolin.in'
   - '+.xiaolinsi.com'
   - '+.xiaolinwl.com'
@@ -57727,6 +57747,7 @@ payload:
   - '+.xiaoluboke.com'
   - '+.xiaoluhaohuo.com'
   - '+.xiaoluyouxuan.com'
+  - '+.xiaoluyy.com'
   - '+.xiaoma-school.com'
   - '+.xiaoma.com'
   - '+.xiaoma.net'
@@ -57912,7 +57933,6 @@ payload:
   - '+.xiaozhustatic1.com'
   - '+.xiaozhustatic2.com'
   - '+.xiaozhustatic3.com'
-  - '+.xiaozhuvideo.com'
   - '+.xiaozuan8.com'
   - '+.xiaozujian.com'
   - '+.xiaozuowen.net'
@@ -58161,6 +58181,7 @@ payload:
   - '+.xingming.net'
   - '+.xingpan.com'
   - '+.xingpin.com'
+  - '+.xingqisihuishou.com'
   - '+.xingqiu.tv'
   - '+.xingqiu520.com'
   - '+.xingqu11.com'
@@ -58173,7 +58194,6 @@ payload:
   - '+.xingshuo.net'
   - '+.xingtac.com'
   - '+.xingtai123.com'
-  - '+.xingtan001.com'
   - '+.xingtangzp.com'
   - '+.xingtouzi.com'
   - '+.xingtu.com'
@@ -59251,6 +59271,7 @@ payload:
   - '+.xupu.name'
   - '+.xupu120.com'
   - '+.xuqyfw.com'
+  - '+.xurong.xyz'
   - '+.xuruowei.com'
   - '+.xusseo.com'
   - '+.xuxian.com'
@@ -60395,6 +60416,7 @@ payload:
   - '+.yindon.com'
   - '+.yindou.com'
   - '+.yindudigital.com'
+  - '+.yindui.net'
   - '+.yinduzx.com'
   - '+.yineitong.com'
   - '+.yinfeiy.com'
@@ -61682,7 +61704,6 @@ payload:
   - '+.yucheng0769.net'
   - '+.yuchengwang.com'
   - '+.yuchenw.com'
-  - '+.yuchk.com'
   - '+.yuchu3d.com'
   - '+.yuchuantech.com'
   - '+.yucl.com'
@@ -61768,7 +61789,6 @@ payload:
   - '+.yueyuevip.com'
   - '+.yueyueworld.com'
   - '+.yueyuez.com'
-  - '+.yueyuxuan.com'
   - '+.yueyuzhushou.com'
   - '+.yueyv.com'
   - '+.yuez.me'
@@ -61779,6 +61799,7 @@ payload:
   - '+.yugasun.com'
   - '+.yuguo.us'
   - '+.yuguod.com'
+  - '+.yugusoft.com'
   - '+.yuheii.com'
   - '+.yuheng.tech'
   - '+.yuhou.com'
@@ -61906,6 +61927,7 @@ payload:
   - '+.yunduokt.net'
   - '+.yundzh.com'
   - '+.yunews.net'
+  - '+.yunexam.com'
   - '+.yunfabiao.com'
   - '+.yunface.com'
   - '+.yunfaka.com'
@@ -62008,6 +62030,7 @@ payload:
   - '+.yunrg.com'
   - '+.yunrongu.com'
   - '+.yunruift.com'
+  - '+.yunruikj.com'
   - '+.yuns1.net'
   - '+.yunsd.net'
   - '+.yunser.com'
@@ -62147,7 +62170,6 @@ payload:
   - '+.yuyin.tv'
   - '+.yuyu.com'
   - '+.yuyue111.com'
-  - '+.yuyuema.com'
   - '+.yuyueshop.com'
   - '+.yuyuhunter.com'
   - '+.yuyuntech.com'
@@ -62277,6 +62299,7 @@ payload:
   - '+.yxttzb.com'
   - '+.yxtvg.com'
   - '+.yxwoo.com'
+  - '+.yxxgame.com'
   - '+.yxxurl.com'
   - '+.yxxzbox.com'
   - '+.yxyfhgc.com'
@@ -62919,7 +62942,6 @@ payload:
   - '+.zgui.com'
   - '+.zguonew.com'
   - '+.zgw.com'
-  - '+.zgwangzhan.com'
   - '+.zgweimeng.com'
   - '+.zgwenku.com'
   - '+.zgwgfw.com'
@@ -63024,6 +63046,7 @@ payload:
   - '+.zhangqiaokeyan.com'
   - '+.zhangqiongjie.com'
   - '+.zhangqiu.cc'
+  - '+.zhangrc.site'
   - '+.zhangread.com'
   - '+.zhangrunnan.com'
   - '+.zhangsenhao.com'
@@ -63215,6 +63238,7 @@ payload:
   - '+.zhengjianzhao.com'
   - '+.zhengjicn.com'
   - '+.zhengjie.com'
+  - '+.zhengjimt.com'
   - '+.zhengmeng.net'
   - '+.zhengpinle.com'
   - '+.zhengqingsong.com'
