--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2425,6 +2425,7 @@ payload:
   - '+.2dfire.com'
   - '+.2dfire.info'
   - '+.2di.cc'
+  - '+.2dph.com'
   - '+.2du.net'
   - '+.2dyou.com'
   - '+.2f.com'
@@ -5194,7 +5195,6 @@ payload:
   - '+.63diy.com'
   - '+.63pe.com'
   - '+.63qingyou.com'
-  - '+.63ys.com'
   - '+.63yx.com'
   - '+.641.com'
   - '+.6417000.com'
@@ -16194,6 +16194,7 @@ payload:
   - '+.coolcode.org'
   - '+.coolcode.tech'
   - '+.coolcoolcloud.com'
+  - '+.coolcou.com'
   - '+.cooldock.com'
   - '+.cooldu.com'
   - '+.cooleasy.net'
@@ -18126,6 +18127,7 @@ payload:
   - '+.dftzj.com'
   - '+.dfxq.com'
   - '+.dfxwdc.com'
+  - '+.dfy027.com'
   - '+.dfyanyi.com'
   - '+.dfyapp.com'
   - '+.dfyl-luxgen.com'
@@ -19107,7 +19109,6 @@ payload:
   - '+.doulaidu.cc'
   - '+.doulaidu.com'
   - '+.doulaidu8.cc'
-  - '+.douliao.net'
   - '+.douluodalu123.com'
   - '+.douluodalu3.com'
   - '+.doumengkeji.mobi'
@@ -20589,7 +20590,6 @@ payload:
   - '+.emlinix.com'
   - '+.emlog.net'
   - '+.emohe.com'
-  - '+.emojidaquan.com'
   - '+.emojimobile.com'
   - '+.emojiwiz.com'
   - '+.empos.net'
@@ -22283,6 +22283,7 @@ payload:
   - '+.fmwei.com'
   - '+.fmwhahaha.com'
   - '+.fmy90.com'
+  - '+.fmzsjc.com'
   - '+.fn-mart.com'
   - '+.fn-tech.com'
   - '+.fn.com'
@@ -22346,7 +22347,6 @@ payload:
   - '+.foooooot.com'
   - '+.fooww.com'
   - '+.for-compass.com'
-  - '+.for-mail.com'
   - '+.for-she.com'
   - '+.for512.com'
   - '+.for68.com'
@@ -25937,7 +25937,6 @@ payload:
   - '+.hbpictures.com'
   - '+.hbptzsbw.com'
   - '+.hbpukang.com'
-  - '+.hbpygt.com'
   - '+.hbqnb.com'
   - '+.hbqnxy.com'
   - '+.hbqtgg.com'
@@ -26283,6 +26282,7 @@ payload:
   - '+.heku.org'
   - '+.hel168.com'
   - '+.helensbar.com'
+  - '+.heliang.cc'
   - '+.helianhealth.com'
   - '+.helight.info'
   - '+.helijia.com'
@@ -27888,6 +27888,7 @@ payload:
   - '+.huaweicloudwaf.com'
   - '+.huaweidevice.com'
   - '+.huaweidun.com'
+  - '+.huaweiempresas.com'
   - '+.huaweimall.com'
   - '+.huaweimarine.com'
   - '+.huaweimossel.com'
@@ -29228,6 +29229,7 @@ payload:
   - '+.ie977.com'
   - '+.ieasn.com'
   - '+.ieasy123.com'
+  - '+.ieasytech.com'
   - '+.ieayoio.com'
   - '+.iebyte.com'
   - '+.iecdn.com'
@@ -29965,7 +29967,6 @@ payload:
   - '+.innovatedigital.com'
   - '+.innovidcn.com'
   - '+.innovisgroup.com'
-  - '+.innsue.com'
   - '+.innvitor.com'
   - '+.inoherb.com'
   - '+.inoneh5.com'
@@ -37615,7 +37616,6 @@ payload:
   - '+.manfen.net'
   - '+.mangafuna.xyz'
   - '+.mangafunc.fun'
-  - '+.mangake.com'
   - '+.mangege.com'
   - '+.mangg.com'
   - '+.mangg.net'
@@ -40551,6 +40551,7 @@ payload:
   - '+.ninebot.com'
   - '+.ninecoign.com'
   - '+.ninepart.com'
+  - '+.nineplaying.com'
   - '+.nineroad.com'
   - '+.ninesix.cc'
   - '+.ninestargroup.com'
@@ -43743,6 +43744,7 @@ payload:
   - '+.qianxibj.net'
   - '+.qianxin.com'
   - '+.qianxinet.com'
+  - '+.qianxingniwo.com'
   - '+.qianxs.com'
   - '+.qianxun.com'
   - '+.qianxunclub.com'
@@ -46179,7 +46181,6 @@ payload:
   - '+.sbiquge.com'
   - '+.sbk-h5.com'
   - '+.sbkh5.com'
-  - '+.sblunwen.com'
   - '+.sbo8.com'
   - '+.sbr-info.com'
   - '+.sbrj.net'
@@ -46831,6 +46832,7 @@ payload:
   - '+.sh-dls.com'
   - '+.sh-eastwes.com'
   - '+.sh-ekeyboard.org'
+  - '+.sh-game.com'
   - '+.sh-henian.com'
   - '+.sh-hilead.com'
   - '+.sh-holfer.com'
@@ -47223,6 +47225,7 @@ payload:
   - '+.shenmadsp.com'
   - '+.shenmamov.cc'
   - '+.shenmayouxi.com'
+  - '+.shenmikj.com'
   - '+.shenmou.com'
   - '+.shenmufeiyang0912.com'
   - '+.shenou.com'
@@ -48011,7 +48014,6 @@ payload:
   - '+.sigu.cc'
   - '+.sigu.me'
   - '+.siguoya.name'
-  - '+.sigure.xyz'
   - '+.sihai-inc.com'
   - '+.sihaidj.com'
   - '+.sihaimg.com'
@@ -50867,6 +50869,7 @@ payload:
   - '+.tech110.net'
   - '+.tech126.com'
   - '+.tech2ipo.com'
+  - '+.tech2real.com'
   - '+.techan.com'
   - '+.techantong.net'
   - '+.techbeat.net'
@@ -52253,6 +52256,7 @@ payload:
   - '+.tsyzm.com'
   - '+.tsz.com'
   - '+.tszckj.com'
+  - '+.tszhjk.com'
   - '+.tszyzx.com'
   - '+.tt-bike.com'
   - '+.tt-ly.com'
@@ -52484,7 +52488,6 @@ payload:
   - '+.tuke88.com'
   - '+.tukexw.com'
   - '+.tukkk.com'
-  - '+.tukong123.com'
   - '+.tuku.cc'
   - '+.tuku.com'
   - '+.tukucc.com'
@@ -53987,7 +53990,6 @@ payload:
   - '+.vivst.com'
   - '+.viwik.com'
   - '+.vixue.com'
-  - '+.viziool.com'
   - '+.vjia.com'
   - '+.vjiazu.com'
   - '+.vjie.com'
@@ -55025,6 +55027,7 @@ payload:
   - '+.weikuo.cc'
   - '+.weikuw.com'
   - '+.weilaishidai.com'
+  - '+.weilaitianwang.com'
   - '+.weilaitiku.com'
   - '+.weilaizhaiju.com'
   - '+.weilanhaian.com'
@@ -55725,6 +55728,7 @@ payload:
   - '+.whyldd.net'
   - '+.whyongwei.com'
   - '+.whyqi.com'
+  - '+.whys558.com'
   - '+.whysdomain.com'
   - '+.whyshop.com'
   - '+.whysodiao.com'
@@ -57050,6 +57054,7 @@ payload:
   - '+.xacnnic.com'
   - '+.xadamai.com'
   - '+.xadiannao.com'
+  - '+.xadlwx.com'
   - '+.xaecong.com'
   - '+.xafc.com'
   - '+.xaffp.com'
@@ -58923,6 +58928,7 @@ payload:
   - '+.xs3cnc.com'
   - '+.xs52.com'
   - '+.xs7.cc'
+  - '+.xs7.com'
   - '+.xs7.la'
   - '+.xs74.com'
   - '+.xs880.com'
@@ -59769,6 +59775,7 @@ payload:
   - '+.yaojibuyu.com'
   - '+.yaojidsfee.com'
   - '+.yaojiedianzi.com'
+  - '+.yaojigames.com'
   - '+.yaojingtang.com'
   - '+.yaokaihui.com'
   - '+.yaolaifen.com'
@@ -60867,6 +60874,7 @@ payload:
   - '+.ylyk.com'
   - '+.ylzbtech.com'
   - '+.ylzms.com'
+  - '+.ylzpay.com'
   - '+.ym-trans.com'
   - '+.ym1998.com'
   - '+.ym23.com'
@@ -60951,7 +60959,6 @@ payload:
   - '+.ynhouse.com'
   - '+.ynhzm.com'
   - '+.yni84.com'
-  - '+.ynianyongheng.com'
   - '+.ynikon.com'
   - '+.yninfo.com'
   - '+.ynit580.com'
@@ -61862,6 +61869,7 @@ payload:
   - '+.yun.pm'
   - '+.yun123.com'
   - '+.yun61.com'
+  - '+.yunadmins.com'
   - '+.yunannet.com'
   - '+.yunaq.com'
   - '+.yunarm.com'
@@ -63272,7 +63280,6 @@ payload:
   - '+.zhenpin.com'
   - '+.zhenren.com'
   - '+.zhenrongbao.com'
-  - '+.zhensoushu.com'
   - '+.zhentan.la'
   - '+.zhenwu.com'
   - '+.zhenxiad.com'
@@ -63512,6 +63519,7 @@ payload:
   - '+.zhiyousx.com'
   - '+.zhiyuanit.com'
   - '+.zhiyuanyun.com'
+  - '+.zhiyuanzhongyi.com'
   - '+.zhiyujit.com'
   - '+.zhiyun-tech.com'
   - '+.zhizaoye.net'
@@ -63866,6 +63874,7 @@ payload:
   - '+.zhunc.vip'
   - '+.zhundao.net'
   - '+.zhundaoyun.com'
+  - '+.zhuniangjia.com'
   - '+.zhuniu.com'
   - '+.zhunniao.com'
   - '+.zhuntui.com'
