--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1849,7 +1849,6 @@ payload:
   - '+.1mall.com'
   - '+.1mao.cc'
   - '+.1mayi.com'
-  - '+.1meiyiliao.com'
   - '+.1mfg.com'
   - '+.1miba.com'
   - '+.1mifudao.com'
@@ -2017,6 +2016,7 @@ payload:
   - '+.218996.com'
   - '+.2197079.com'
   - '+.21bcr.com'
+  - '+.21beats.com'
   - '+.21bm.com'
   - '+.21bowu.com'
   - '+.21cake.com'
@@ -3060,7 +3060,6 @@ payload:
   - '+.373258.com'
   - '+.3733.com'
   - '+.3737.com'
-  - '+.3737g.com'
   - '+.3737k.com'
   - '+.3737tyc.com'
   - '+.373best.com'
@@ -6691,7 +6690,6 @@ payload:
   - '+.93jiang.com'
   - '+.93jx.net'
   - '+.93kk.com'
-  - '+.93ku.com'
   - '+.93lh.com'
   - '+.93njf0.com'
   - '+.93pk.com'
@@ -6849,7 +6847,6 @@ payload:
   - '+.96sdk.com'
   - '+.96shuba.cc'
   - '+.96sir.com'
-  - '+.96ttt.com'
   - '+.96weixin.com'
   - '+.96youhuiquan.com'
   - '+.96yx.com'
@@ -7934,6 +7931,7 @@ payload:
   - '+.aiqianduan.com'
   - '+.aiqianxq.com'
   - '+.aiqin.com'
+  - '+.aiqingyu1314.com'
   - '+.aiqisoft.com'
   - '+.aiqiy.com'
   - '+.aiqiye.cc'
@@ -8042,6 +8040,7 @@ payload:
   - '+.aixiawa.com'
   - '+.aixiawx.com'
   - '+.aixiaxs.com'
+  - '+.aixiaxsw.com'
   - '+.aixiegao.com'
   - '+.aixiezuo.com'
   - '+.aixifan.com'
@@ -10537,7 +10536,6 @@ payload:
   - '+.bestwa.com'
   - '+.bestwehotel.com'
   - '+.bestweshop.com'
-  - '+.bestxtools.com'
   - '+.bestzone.org'
   - '+.bet007.com'
   - '+.bet08365.com'
@@ -10795,7 +10793,6 @@ payload:
   - '+.biliimg.com'
   - '+.bilimoe.com'
   - '+.bilingling.com'
-  - '+.bilinstar.com'
   - '+.bilive.com'
   - '+.bilivideo.com'
   - '+.biliyu.com'
@@ -13879,7 +13876,6 @@ payload:
   - '+.china-cloud.com'
   - '+.china-co.com'
   - '+.china-coc.org'
-  - '+.china-cold.com'
   - '+.china-consulate.org'
   - '+.china-csdz.com'
   - '+.china-csm.org'
@@ -14836,7 +14832,6 @@ payload:
   - '+.chushu123.com'
   - '+.chutianlaser.com'
   - '+.chutianzhinu.com'
-  - '+.chuxiangyi.com'
   - '+.chuxindata.com'
   - '+.chuxingyouhui.com'
   - '+.chuxinhd.com'
@@ -16342,7 +16337,6 @@ payload:
   - '+.cps800.com'
   - '+.cps88.cc'
   - '+.cpsbeijing.org'
-  - '+.cpsct.com'
   - '+.cpsenglish.com'
   - '+.cptae.com'
   - '+.cpu114.com'
@@ -18653,11 +18647,9 @@ payload:
   - '+.dkskcloud.com'
   - '+.dky.cc'
   - '+.dkybpc.com'
-  - '+.dl-origin.ubnt.com'
   - '+.dl-rc.com'
   - '+.dl.delivery.mp.microsoft.com'
   - '+.dl.djicdn.com'
-  - '+.dl.ubnt.com'
   - '+.dl0728.com'
   - '+.dl158.net'
   - '+.dl2link.com'
@@ -20167,7 +20159,6 @@ payload:
   - '+.eda1024.com'
   - '+.eda365.com'
   - '+.eda365.net'
-  - '+.eda8.com'
   - '+.edabbs.com'
   - '+.edaboss.com'
   - '+.edacn.net'
@@ -21457,7 +21448,6 @@ payload:
   - '+.fanqiewin10.com'
   - '+.fanquanba.com'
   - '+.fanquanwang.com'
-  - '+.fanrenshucheng.com'
   - '+.fanruan.com'
   - '+.fans.fans'
   - '+.fans1.com'
@@ -23612,7 +23602,6 @@ payload:
   - '+.ggwan.com'
   - '+.ggwan.net'
   - '+.ggweb.net'
-  - '+.ggxt.net'
   - '+.ggxx.net'
   - '+.ggxxe.com'
   - '+.ggytc.com'
@@ -24303,6 +24292,7 @@ payload:
   - '+.greenlandsc.com'
   - '+.greentomail.com'
   - '+.greenxf.com'
+  - '+.greenxiazai.com'
   - '+.gretf.com'
   - '+.greycdn.net'
   - '+.greyli.com'
@@ -29980,6 +29970,7 @@ payload:
   - '+.inrugao.com'
   - '+.insarticle.com'
   - '+.inshiqi.com'
+  - '+.insidelinuxdev.net'
   - '+.insnail.com'
   - '+.inspur.com'
   - '+.inspuronline.com'
@@ -30051,6 +30042,7 @@ payload:
   - '+.ioeyjsb.com'
   - '+.ioffershow.com'
   - '+.ioffice100.com'
+  - '+.ioi.wang'
   - '+.ioio.pw'
   - '+.ioiox.com'
   - '+.iok.la'
@@ -30259,7 +30251,6 @@ payload:
   - '+.irukou.com'
   - '+.irunyan.com'
   - '+.is-programmer.com'
-  - '+.is26.com'
   - '+.is36.com'
   - '+.isamanhua.com'
   - '+.isaonian.com'
@@ -34656,7 +34647,6 @@ payload:
   - '+.kxtui.com'
   - '+.kxtwz.com'
   - '+.kxvuv.com'
-  - '+.kxwan.com'
   - '+.kxxsc.com'
   - '+.kxxxl.com'
   - '+.kxzmw.com'
@@ -36856,6 +36846,7 @@ payload:
   - '+.lt3c.com'
   - '+.ltaaa.com'
   - '+.ltaaa.net'
+  - '+.ltao.com'
   - '+.ltd.com'
   - '+.ltesting.net'
   - '+.ltfwzs.com'
@@ -37255,6 +37246,7 @@ payload:
   - '+.lytning.xyz'
   - '+.lytoufang.com'
   - '+.lytpw.com'
+  - '+.lytuchuang2.com'
   - '+.lyun.me'
   - '+.lyunweb.com'
   - '+.lyvnee.com'
@@ -37486,7 +37478,6 @@ payload:
   - '+.maimiaotech.com'
   - '+.maimn.com'
   - '+.maimowang.com'
-  - '+.maimuban.com'
   - '+.mainaer.com'
   - '+.maine1688.com'
   - '+.mainlandip.com'
@@ -39918,7 +39909,6 @@ payload:
   - '+.myyx915.com'
   - '+.myyzd.com'
   - '+.myzaker.com'
-  - '+.myzebravip.com'
   - '+.myzhiniu.com'
   - '+.myzhongjin.com'
   - '+.myzte.com'
@@ -42339,7 +42329,6 @@ payload:
   - '+.peoplenews.eu'
   - '+.peoplerail.com'
   - '+.peopleyuqing.com'
-  - '+.pepcn.com'
   - '+.pepresource.com'
   - '+.perfect-input.com'
   - '+.perfect-is-shit.com'
@@ -44898,6 +44887,7 @@ payload:
   - '+.qyled.xyz'
   - '+.qymgc.com'
   - '+.qyous.com'
+  - '+.qypiayer.xyz'
   - '+.qyrb.com'
   - '+.qyren168.com'
   - '+.qysd.net'
@@ -47554,7 +47544,6 @@ payload:
   - '+.shopyy.com'
   - '+.shortof.com'
   - '+.shoubaodan.com'
-  - '+.shoubiaobaojia.com'
   - '+.shouce.ren'
   - '+.shouce365.com'
   - '+.shouchaobao.vip'
@@ -48174,7 +48163,6 @@ payload:
   - '+.sinomapping.com'
   - '+.sinomaps.com'
   - '+.sinomatin.com'
-  - '+.sinomod.com'
   - '+.sinonet.org'
   - '+.sinooilgas.com'
   - '+.sinopec.com'
@@ -48253,8 +48241,6 @@ payload:
   - '+.sivan.in'
   - '+.sivps.com'
   - '+.siwaman.com'
-  - '+.siwazyw.tv'
-  - '+.siwazyw.xyz'
   - '+.siwazywcdn2.com'
   - '+.siwazywimg.com'
   - '+.siwei.me'
@@ -48277,7 +48263,6 @@ payload:
   - '+.siyuanedu.com'
   - '+.siyuanren.com'
   - '+.siyuefeng.com'
-  - '+.siyunxi.com'
   - '+.siyuweb.com'
   - '+.sizeofvoid.net'
   - '+.sizuo.com'
@@ -48493,6 +48478,7 @@ payload:
   - '+.sm688839.com'
   - '+.sm96596.com'
   - '+.smabaike.com'
+  - '+.smalljun.com'
   - '+.smallk.net'
   - '+.smallpdfer.com'
   - '+.smallxu.me'
@@ -48923,6 +48909,7 @@ payload:
   - '+.sosoyunpan.com'
   - '+.sosoyy.com'
   - '+.sosuo.name'
+  - '+.sotake.com'
   - '+.sotemall.com'
   - '+.sothink.com'
   - '+.sotwm.com'
@@ -49210,6 +49197,7 @@ payload:
   - '+.ssine.cc'
   - '+.ssine.ink'
   - '+.ssipex.com'
+  - '+.ssish.com'
   - '+.ssjjss.com'
   - '+.ssjjtt.com'
   - '+.ssjlicai.com'
@@ -51734,6 +51722,7 @@ payload:
   - '+.todokit.xyz'
   - '+.todonow.com'
   - '+.todosomeone.com'
+  - '+.todreamer.com'
   - '+.toec-gdgs.com'
   - '+.toec-iot.com'
   - '+.toec.com'
@@ -52347,7 +52336,6 @@ payload:
   - '+.ttzw.tv'
   - '+.ttzx.tv'
   - '+.ttzyw.com'
-  - '+.tu11.com'
   - '+.tu520.cc'
   - '+.tu8.cc'
   - '+.tu960.com'
@@ -52428,7 +52416,6 @@ payload:
   - '+.tuiberry.com'
   - '+.tuibit.com'
   - '+.tuicoco.com'
-  - '+.tuicool.com'
   - '+.tuidaniu.com'
   - '+.tuidc.com'
   - '+.tuideli.com'
@@ -54356,7 +54343,6 @@ payload:
   - '+.waitingfy.com'
   - '+.waitsun.com'
   - '+.wajueji.com'
-  - '+.wajuejin.com'
   - '+.wakatool.com'
   - '+.wakedata.com'
   - '+.waketu.com'
@@ -56100,7 +56086,6 @@ payload:
   - '+.wmsub.com'
   - '+.wmton.com'
   - '+.wmtp.net'
-  - '+.wmtxt.com'
   - '+.wmupd.com'
   - '+.wmvideo.com'
   - '+.wmxxgy.com'
@@ -57585,7 +57570,6 @@ payload:
   - '+.xianlaihy.com'
   - '+.xianlife.com'
   - '+.xianms.com'
-  - '+.xiannanyou.com'
   - '+.xianniuzu.com'
   - '+.xiannvtu.com'
   - '+.xianpp.com'
@@ -57847,7 +57831,6 @@ payload:
   - '+.xiaoshuoshu.org'
   - '+.xiaoshuotxt.com'
   - '+.xiaoshuozu.com'
-  - '+.xiaoshuwu.vip'
   - '+.xiaoshuxiong.com'
   - '+.xiaositv.com'
   - '+.xiaoso.net'
@@ -58987,7 +58970,6 @@ payload:
   - '+.xstx.info'
   - '+.xstxt.com'
   - '+.xsu.cc'
-  - '+.xsvps.com'
   - '+.xswdcasting.com'
   - '+.xsycps.com'
   - '+.xsyk021.com'
@@ -60932,6 +60914,7 @@ payload:
   - '+.ymyun.com'
   - '+.ymyxzz.com'
   - '+.ymzer.com'
+  - '+.ymzsl.dev'
   - '+.yn-tobacco.com'
   - '+.yn12396.com'
   - '+.yn58.com'
@@ -61162,7 +61145,6 @@ payload:
   - '+.youganghangmoguan.com'
   - '+.yougaoji.com'
   - '+.yougaoyx.com'
-  - '+.yougequn.com'
   - '+.yougou.com'
   - '+.yougu.tv'
   - '+.youguo.com'
@@ -61711,6 +61693,7 @@ payload:
   - '+.yucheng0769.net'
   - '+.yuchengwang.com'
   - '+.yuchenw.com'
+  - '+.yuchiweb.icu'
   - '+.yuchu3d.com'
   - '+.yuchuantech.com'
   - '+.yucl.com'
@@ -62224,6 +62207,7 @@ payload:
   - '+.ywtd.xyz'
   - '+.ywtlfishing.com'
   - '+.ywtrzm.com'
+  - '+.ywtuchuang1.com'
   - '+.ywtx.cc'
   - '+.ywxue.com'
   - '+.ywxzz.com'
@@ -62346,7 +62330,6 @@ payload:
   - '+.yyfangchan.com'
   - '+.yyfax.com'
   - '+.yyfdcw.com'
-  - '+.yyfq.com'
   - '+.yyfsb.com'
   - '+.yyg.com'
   - '+.yygjuu.club'
@@ -63034,7 +63017,6 @@ payload:
   - '+.zhanghaijun.com'
   - '+.zhanghongliang.com'
   - '+.zhanghuanglong.com'
-  - '+.zhangjh.me'
   - '+.zhangjiaoshou.net'
   - '+.zhangjiexiong.com'
   - '+.zhangjinkun.com'
@@ -64049,7 +64031,6 @@ payload:
   - '+.zing-api.com'
   - '+.zingke.com'
   - '+.ziniao.com'
-  - '+.ziningmeng.com'
   - '+.ziniusoft.com'
   - '+.zintao.com'
   - '+.zintow.com'
@@ -64123,7 +64104,6 @@ payload:
   - '+.ziyuantun.com'
   - '+.ziyuewentao.com'
   - '+.ziyun.com'
-  - '+.ziyuyx.com'
   - '+.zizaike.com'
   - '+.zizhengfang.com'
   - '+.zizhuauto.com'
@@ -64654,7 +64634,6 @@ payload:
   - '+.zsdlw.com'
   - '+.zsemall.com'
   - '+.zseoo.com'
-  - '+.zsevent.com'
   - '+.zsezt.com'
   - '+.zsf.cool'
   - '+.zsfund.com'
