--- a/directbak.yaml
+++ b/directbak.yaml
@@ -84,7 +84,6 @@ payload:
   - '+.0110m.com'
   - '+.0119.com'
   - '+.0123401234.com'
-  - '+.0123456789.biz'
   - '+.0123456789.com'
   - '+.0135135.com'
   - '+.01368.com'
@@ -235,7 +234,6 @@ payload:
   - '+.027tytpf.com'
   - '+.027wcbyy.com'
   - '+.027xf.com'
-  - '+.027yunwei.com'
   - '+.027yx.com'
   - '+.027zhan.com'
   - '+.027zpw.com'
@@ -1292,7 +1290,6 @@ payload:
   - '+.15cdn.com'
   - '+.15gg.com'
   - '+.15gift.com'
-  - '+.15google.com'
   - '+.15hr.com'
   - '+.15in.com'
   - '+.15ms.com'
@@ -2471,7 +2468,6 @@ payload:
   - '+.2r3r.com'
   - '+.2rich.net'
   - '+.2shihui.net'
-  - '+.2shoujie.com'
   - '+.2shu8.cc'
   - '+.2sitebbs.com'
   - '+.2smtc.com'
@@ -2574,6 +2570,7 @@ payload:
   - '+.31byq.com'
   - '+.31bzjx.com'
   - '+.31cg.com'
+  - '+.31chaxun.com'
   - '+.31expo.com'
   - '+.31fabu.com'
   - '+.31food.com'
@@ -2594,6 +2591,7 @@ payload:
   - '+.31mold.com'
   - '+.31myhome.com'
   - '+.31pump.com'
+  - '+.31rent.com'
   - '+.31rzp.com'
   - '+.31seal.com'
   - '+.31sjjx.com'
@@ -3402,7 +3400,6 @@ payload:
   - '+.41188.com'
   - '+.411au.com'
   - '+.4124.com'
-  - '+.414.com'
   - '+.4143.cc'
   - '+.41443.com'
   - '+.41717.net'
@@ -5041,7 +5038,6 @@ payload:
   - '+.5sai.com'
   - '+.5sdy.cc'
   - '+.5sdy.com'
-  - '+.5se34.com'
   - '+.5seals.com'
   - '+.5see.com'
   - '+.5seestar.com'
@@ -5618,7 +5614,6 @@ payload:
   - '+.757dy.com'
   - '+.7580.ltd'
   - '+.75n474.com'
-  - '+.75team.com'
   - '+.75xyx.com'
   - '+.7618.com'
   - '+.761a.com'
@@ -9649,7 +9644,6 @@ payload:
   - '+.baidudaquan.com'
   - '+.baidufe.com'
   - '+.baidufree.com'
-  - '+.baiduhua.com'
   - '+.baidulook.com'
   - '+.baidunongmin.com'
   - '+.baiduor.com'
@@ -12305,7 +12299,6 @@ payload:
   - '+.cafecole-maison.com'
   - '+.caffci.org'
   - '+.caffeenglish.com'
-  - '+.cagesblog.com'
   - '+.cagetest.com'
   - '+.cageystone.com'
   - '+.cago365.com'
@@ -12912,7 +12905,6 @@ payload:
   - '+.ccztv.com'
   - '+.cd-cxh.com'
   - '+.cd-kc.com'
-  - '+.cd-vv.com'
   - '+.cd-zc.com'
   - '+.cd120.com'
   - '+.cd23f.com'
@@ -18421,6 +18413,7 @@ payload:
   - '+.digg58.com'
   - '+.digi-uniclick.net'
   - '+.digi-wo.com'
+  - '+.digiic.com'
   - '+.digirepub.com'
   - '+.digisky.com'
   - '+.digital-ren.com'
@@ -18913,7 +18906,6 @@ payload:
   - '+.doitim.com'
   - '+.doiua.com'
   - '+.doki8.com'
-  - '+.doko.com'
   - '+.dolanzz.com'
   - '+.dolcn.com'
   - '+.dole.club'
@@ -19175,7 +19167,6 @@ payload:
   - '+.downos.com'
   - '+.downpp.com'
   - '+.downsave.com'
-  - '+.downun.com'
   - '+.downv.com'
   - '+.downxia.com'
   - '+.downxy.com'
@@ -19454,7 +19445,6 @@ payload:
   - '+.duobei.com'
   - '+.duobeiyun.com'
   - '+.duobeiyun.net'
-  - '+.duoben.net'
   - '+.duobiji.com'
   - '+.duocaitou.com'
   - '+.duochang.cc'
@@ -21413,7 +21403,6 @@ payload:
   - '+.fanhai-hk.com'
   - '+.fanhai8.com'
   - '+.fanhaobai.com'
-  - '+.fanhaojia.org'
   - '+.fanhaoyue.com'
   - '+.fanhonghua.net'
   - '+.fanhougame.com'
@@ -24588,7 +24577,6 @@ payload:
   - '+.guilinlife.com'
   - '+.guilintravel.com'
   - '+.guimengning.com'
-  - '+.guimi.com'
   - '+.guimilu.com'
   - '+.guimipay.net'
   - '+.guitarpro.cc'
@@ -25219,6 +25207,7 @@ payload:
   - '+.haier.com'
   - '+.haier.hk'
   - '+.haier.net'
+  - '+.haiercash.com'
   - '+.haiershequ.com'
   - '+.haierubic.com'
   - '+.haieruplus.com'
@@ -25414,6 +25403,7 @@ payload:
   - '+.hangzhoutianqi114.com'
   - '+.hanhai.net'
   - '+.hanhaiqikan.com'
+  - '+.hanhwlab.com'
   - '+.hanjianbing.org'
   - '+.hanjiaying.com'
   - '+.hanjie.biz'
@@ -31725,6 +31715,7 @@ payload:
   - '+.jingua168.com'
   - '+.jingujie.com'
   - '+.jingutrust.com'
+  - '+.jingwacenter.com'
   - '+.jingwei.com'
   - '+.jingwei.link'
   - '+.jingwuhui.com'
@@ -33051,6 +33042,7 @@ payload:
   - '+.jxpta.com'
   - '+.jxqcw.com'
   - '+.jxqgpx.com'
+  - '+.jxqyfw.com'
   - '+.jxrjzx.com'
   - '+.jxrsrc.com'
   - '+.jxrtv.com'
@@ -35105,7 +35097,6 @@ payload:
   - '+.lbxcn.com'
   - '+.lbxdrugs.com'
   - '+.lbxueyuan.com'
-  - '+.lbyczf.com'
   - '+.lbzuo.com'
   - '+.lc-cn-e1-shared.com'
   - '+.lc-cn-n1-npxfk.com'
@@ -37142,7 +37133,6 @@ payload:
   - '+.lwxiaoshuo.com'
   - '+.lwxs.org'
   - '+.lwxs9.com'
-  - '+.lwxs99.com'
   - '+.lwxstxt.com'
   - '+.lx-led.com'
   - '+.lx.cok.elexapp.com'
@@ -42928,7 +42918,6 @@ payload:
   - '+.popumed.com'
   - '+.poputar.com'
   - '+.popziti.com'
-  - '+.poqsoft.com'
   - '+.porlockz.com'
   - '+.porschesky.com'
   - '+.portablesoft.org'
@@ -44061,7 +44050,6 @@ payload:
   - '+.qinziheng.com'
   - '+.qionghaif.com'
   - '+.qiongming.com'
-  - '+.qiongri.com'
   - '+.qipai007.com'
   - '+.qipaifan.com'
   - '+.qipamaijia.com'
@@ -44244,7 +44232,6 @@ payload:
   - '+.qking.ink'
   - '+.qkkjd.com'
   - '+.qkl123.com'
-  - '+.qkl126.com'
   - '+.qknown.com'
   - '+.qksw.com'
   - '+.qktoutiao.com'
@@ -45545,7 +45532,6 @@ payload:
   - '+.rollingstone.net'
   - '+.rollupjs.com'
   - '+.rom100.com'
-  - '+.romeng.men'
   - '+.romhui.com'
   - '+.romjd.com'
   - '+.romleyuan.com'
@@ -46619,6 +46605,7 @@ payload:
   - '+.segotep.com'
   - '+.segwayrobotics.com'
   - '+.seidns.com'
+  - '+.seikim.com'
   - '+.seinfeldtv.com'
   - '+.seisman.info'
   - '+.sejai.com'
@@ -50418,7 +50405,6 @@ payload:
   - '+.taisantech.com'
   - '+.taishangshiwu.com'
   - '+.taishengtoys.com'
-  - '+.taitongdaikuan.com'
   - '+.taiwandao.tw'
   - '+.taiwu.com'
   - '+.taixingren.com'
@@ -51907,6 +51893,7 @@ payload:
   - '+.topproio.com'
   - '+.topqh.net'
   - '+.toprand.com'
+  - '+.toprocn.com'
   - '+.topsage.com'
   - '+.topscan.com'
   - '+.topsedu.com'
@@ -54052,6 +54039,7 @@ payload:
   - '+.volcimagex.net'
   - '+.volcsiriusbd.com'
   - '+.volctracer.com'
+  - '+.volcvideo.com'
   - '+.volcvod.com'
   - '+.voldp.com'
   - '+.volit.com'
@@ -58767,7 +58755,6 @@ payload:
   - '+.xmxwz.com'
   - '+.xmyeditor.com'
   - '+.xmyijing.com'
-  - '+.xmyipin.com'
   - '+.xmylhy.com'
   - '+.xmysgame.com'
   - '+.xmysinter.com'
@@ -58946,7 +58933,6 @@ payload:
   - '+.xskhome.com'
   - '+.xslb.me'
   - '+.xsldh.net'
-  - '+.xslou.com'
   - '+.xsm818.com'
   - '+.xsmaofa.com'
   - '+.xsmnews.com'
@@ -59300,7 +59286,6 @@ payload:
   - '+.xwlunwen.com'
   - '+.xwlxw.com'
   - '+.xwood.net'
-  - '+.xwsj.org'
   - '+.xwtex.com'
   - '+.xwuad.com'
   - '+.xww360.com'
@@ -60751,6 +60736,7 @@ payload:
   - '+.yizlife.com'
   - '+.yizu.org'
   - '+.yizuocity.com'
+  - '+.yizuxing.com'
   - '+.yj-bank.com'
   - '+.yj-fun.com'
   - '+.yj.ink'
@@ -60786,7 +60772,6 @@ payload:
   - '+.yjz9.com'
   - '+.yk08.com'
   - '+.yk211.com'
-  - '+.ykadx.com'
   - '+.ykccn.com'
   - '+.ykclass.com'
   - '+.ykdgd.com'
@@ -60957,7 +60942,6 @@ payload:
   - '+.ynshf.com'
   - '+.ynshijian.com'
   - '+.ynsjg.com'
-  - '+.ynsqx.com'
   - '+.ynteng.com'
   - '+.yntsg.com'
   - '+.ynwin.com'
@@ -62359,6 +62343,7 @@ payload:
   - '+.yypm.com'
   - '+.yypt.com'
   - '+.yyq.com'
+  - '+.yyrec.com'
   - '+.yyrenting.com'
   - '+.yyrtv.com'
   - '+.yysg11.co'
@@ -64087,6 +64072,7 @@ payload:
   - '+.ziyadiaoyu.com'
   - '+.ziyainfo.com'
   - '+.ziyan666.com'
+  - '+.ziyanfoods.com'
   - '+.ziyawang.com'
   - '+.ziye114.com'
   - '+.ziyexing.com'
@@ -64878,6 +64864,7 @@ payload:
   - '+.zutianke.com'
   - '+.zuulee.com'
   - '+.zuxcgames.com'
+  - '+.zuxiaoyi.com'
   - '+.zuyunfei.com'
   - '+.zuyushop.com'
   - '+.zuzheyong.com'
